--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
